# pyxorfilter

./: .gitignore  .gitmodules  .travis.yml  MANIFEST.in  README.md  pyproject-cibuildwheel.toml  pyproject.toml  setup.py
.github/workflows/: wheels.yml
pyxorfilter/: __init__.py  ffibuild.py  pyxorfilter.py
tests/: test_fuse16.py  test_fuse8.py  test_xor16.py  test_xor8.py
