[project]
name = "pyxorfilter"
version = "1.0.0"
description = "Python bindings for C implementation of xorfilter"
authors = [
    {name = "Amey Narkhede", email = "ameynarkhede02@gmail.com"},
]
dependencies = ["cffi"]
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.0"

[project.urls]
Homepage = "https://github.com/glitzflitz/pyxorfilter"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
environment = { PIP_GLOBAL_OPTION="build_ext", PIP_NO_BUILD_ISOLATION="1" , CIBUILDWHEEL="1" }
build-frontend = "pip"

[tool.cibuildwheel.linux]
before-all = "yum install -y libffi-devel"

[tool.cibuildwheel.macos]
before-all = "brew install libffi"

[[tool.cibuildwheel.overrides]]
select = "*-manylinux2_*"
before-all = "apt-get -y install libffi-dev"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add libffi-dev"

[tool.setuptools]
py-modules = []
